[package]
name = "try-crate"
publish = false
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expand = "0.2.0"
type-layout = { path = "..", features = ["serde1"] }
