[package]
name = "type-layout-derive"
description = "Derive macro implementation for type-layout crate"
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.40"
quote = "1.0.7"
proc-macro2 = "1.0.21"
